force-app/main/default/objects/DR_PS_Escalation__c/DR_PS_Escalation__c.object-meta.xml
<CustomObject>
    <label>DR PS Escalation</label>
    <nameField>
        <displayFormat>PSER-{0000}</displayFormat>
        <label>DR PS Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DR PS Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>