force-app/main/default/objects/DR_PS_Escalation__c/fields/CDM__c.field-meta.xml
<CustomField>
    <fullName>CDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_PS_Escalations3</relationshipName>
    <type>Lookup</type>
</CustomField>