force-app/main/default/objects/DR_PS_Escalation__c/fields/Channel_Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Channel_Ops_Notes__c</fullName>
    <label>Channel Ops Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>