force-app/main/default/objects/DR_PS_Escalation__c/fields/Deal_Initiated_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Initiated_Type__c</fullName>
    <label>Deal Initiated Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced New Logo (PSNL)</fullName>
            </value>
            <value>
                <fullName>Partner Sourced Expand</fullName>
            </value>
            <value>
                <fullName>Rubrik Sourced</fullName>
                <isActive>false</isActive>
                <label>Rubrik Sourced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>