force-app/main/default/objects/DR_PS_Escalation__c/fields/Deal_Reg_AE__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Reg AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_PS_Escalations2</relationshipName>
    <type>Lookup</type>
</CustomField>