force-app/main/default/objects/DR_PS_Escalation__c/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Registration</label>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>DR PS Escalations</relationshipLabel>
    <relationshipName>DR_PS_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>