force-app/main/default/objects/DR_PS_Escalation__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <description>Number of days between Linked Existing/New Oppty and Linked DR</description>
    <formula>IF(ISBLANK( New_Opportunity__c ),( Deal_Registration__r.CreatedDate - Existing_Opportunity__r.CreatedDate),(Deal_Registration__r.CreatedDate - New_Opportunity__r.CreatedDate))</formula>
    <inlineHelpText>Number of days between Linked Existing/New Oppty and Linked DR Created Dates</inlineHelpText>
    <label>Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>