force-app/main/default/objects/DR_PS_Escalation__c/fields/DR_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Submitted_Date__c</fullName>
    <formula>Deal_Registration__r.Deal_Reg_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Submitted Date</label>
    <type>DateTime</type>
</CustomField>