force-app/main/default/objects/DR_PS_Escalation__c/fields/End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DR PS Escalations (End User Account)</relationshipLabel>
    <relationshipName>DR_PS_Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>