force-app/main/default/objects/DR_PS_Escalation__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>