force-app/main/default/objects/DR_PS_Escalation__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dormant Opp</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Incorrect Selection at Approval</fullName>
            </value>
            <value>
                <fullName>New Opp-DR Move</fullName>
            </value>
            <value>
                <fullName>Split Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>