force-app/main/default/objects/DR_PS_Escalation__c/fields/Existing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Existing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DR PS Escalations</relationshipLabel>
    <relationshipName>DR_PS_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>