force-app/main/default/objects/DR_PS_Escalation__c/fields/How_Partner_Sourced_this_Customer__c.field-meta.xml
<CustomField>
    <fullName>How_Partner_Sourced_this_Customer__c</fullName>
    <label>How Partner Sourced this Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>