force-app/main/default/objects/DR_PS_Escalation__c/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DR PS Escalations (New Opportunity)</relationshipLabel>
    <relationshipName>DR_PS_Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>