force-app/main/default/objects/DR_PS_Escalation__c/fields/Opp_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opp_ACV__c</fullName>
    <formula>IF( ISBLANK( New_Opportunity__c ) , Existing_Opportunity__r.New_Expansion_ACV__c, New_Opportunity__r.New_Expansion_ACV__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>