force-app/main/default/objects/DR_PS_Escalation__c/fields/Opportunity_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ACV__c</fullName>
    <label>Opportunity ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>