force-app/main/default/objects/DR_PS_Escalation__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>IF( New_Opportunity__c != null,  New_Opportunity__r.CloseDate , Existing_Opportunity__r.CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>