force-app/main/default/objects/DR_PS_Escalation__c/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <formula>Deal_Registration__r.Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Created Date</label>
    <type>DateTime</type>
</CustomField>