force-app/main/default/objects/DR_PS_Escalation__c/fields/Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DR PS Escalations</relationshipLabel>
    <relationshipName>DR_PS_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>