force-app/main/default/objects/DR_PS_Escalation__c/fields/Partner_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Email__c</fullName>
    <formula>Deal_Registration__r.Partner_Rep_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep Email</label>
    <type>Text</type>
</CustomField>