force-app/main/default/objects/DR_PS_Escalation__c/fields/Partner_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Name__c</fullName>
    <formula>Deal_Registration__r.Partner_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Rep Name</label>
    <type>Text</type>
</CustomField>