force-app/main/default/objects/DR_PS_Escalation__c/fields/Request_Age__c.field-meta.xml
<CustomField>
    <fullName>Request_Age__c</fullName>
    <formula>IF(
    ISPICKVAL( Status__c , &quot;No Action&quot; ) || 
    ISPICKVAL( Status__c , &quot;Duplicate&quot; ) ||
    ISPICKVAL( Status__c , &quot;Rejected&quot; ) ||
    ISPICKVAL( Status__c , &quot;Approved&quot; ),
    DATEVALUE(Close_Date__c) - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate)
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>