force-app/main/default/objects/DR_PS_Escalation__c/fields/Requester_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requester_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_PS_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>