force-app/main/default/objects/DR_PS_Escalation__c/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_PS_Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>