force-app/main/default/objects/DR_PS_Escalation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to track status of the PS Escalation</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>More Info Required</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Pending AE Approval</fullName>
            </value>
            <value>
                <fullName>Pending Channel VP Approval</fullName>
            </value>
            <value>
                <fullName>Pending Channel Ops Approval</fullName>
            </value>
            <value>
                <fullName>Pending Sales RVP Approval</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Pending LT Approval</fullName>
                <isActive>false</isActive>
                <label>Pending LT Approval</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>