force-app/main/default/objects/DR_PS_Escalation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Escalation_Type__c</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>New_Opportunity__c</columns>
    <columns>Existing_Opportunity__c</columns>
    <columns>Deal_Registration__c</columns>
    <columns>Deal_Initiated_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity_ACV__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>