force-app/main/default/objects/DR_PS_Escalation__c/listViews/Pending_Action_List.listView-meta.xml
<ListView>
    <fullName>Pending_Action_List</fullName>
    <columns>NAME</columns>
    <columns>CDM__c</columns>
    <columns>Status__c</columns>
    <columns>Team__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Rejected</value>
    </filters>
    <label>Pending Action List</label>
</ListView>