force-app/main/default/objects/DR_PS_Escalation__c/listViews/Pending_Channel_Ops_review.listView-meta.xml
<ListView>
    <fullName>Pending_Channel_Ops_review</fullName>
    <columns>NAME</columns>
    <columns>CDM__c</columns>
    <columns>Escalation_Type__c</columns>
    <columns>Team__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Channel Ops Approval</value>
    </filters>
    <label>Pending Channel Ops review</label>
</ListView>