force-app/main/default/objects/DR_PS_Escalation__c/listViews/Under_Review.listView-meta.xml
<ListView>
    <fullName>Under_Review</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Team__c</columns>
    <columns>CDM__c</columns>
    <columns>Escalation_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Under Review</label>
</ListView>